# Mathics3-notebook-jupyter

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
admin-tools/: convert-logos.sh  make-dist.sh
example-notebooks/: Gallery-Examples.ipynb  Mathics3-Kernel-Introduction.ipynb
examples/: Gallery-Examples.ipynb  Mathics3-Kernel-Gallery-Examples.ipynb  Mathics3-Kernel-Introduction.ipynb  README.md
mathics3_jupyter_kernel/: __init__.py  __main__.py  formatter.py  install_kernel.py  kernel.py  version.py
mathics3_jupyter_notebook/: __main__.py  formatter.py  install.py  install_kernel.py  jupyter.py  kernel.py
