[build-system]
requires = [
    "setuptools>=80", # CVE-2024-38335 and later CVE's recommend this
    "wheel",
    "packaging",
]
build-backend = "setuptools.build_meta"

[project]
description = "Jupyter Notebook integration for Mathics3"
dependencies = [
    "mathics3_notebook_frontends >= 1.0.0",
    "jupyter_client",
    "jupyterlab",
    "Mathics3-pygments",
]
license = "GPL-3.0-or-later"
name = "mathics3_jupyter_kernel"
requires-python = ">=3.11"
maintainers = [
    {name = "Mathics3 Group", email = "mathics-devel@googlegroups.com"},
]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Software Development :: Interpreters",
]

dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "jupyter-console",
    "check-jsonschema",
    "pytest",
    "pre-commit",
]

[project.urls]
Homepage = "https://mathics.org/"
Downloads = "https://github.com/Mathics3/Mathics3-notebook-jupyter/releases"

[project.scripts]
install-mathics3-jupyter-kernel = "mathics3_jupyter_kernel.install_kernel:main"

[[tool.mypy.overrides]]
ignore_missing_imports = true

[tool.setuptools.dynamic]
version = {attr = "mathics3_jupyter_kernel.version.__version__"}

[tool.setuptools.packages.find]
include = ["mathics3_jupyter_kernel"]
